# Fractal_engine_Course_project

./: README.md
src/: CMakeLists.txt  main.cpp
src/engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  key_input.cpp  key_input.hpp  math_shapes.cpp  model.cpp  model.hpp  prime_shapes.hpp  shader.cpp  shader.hpp  svo.hpp  text.cpp  text.hpp  time.cpp  time.hpp  utils.hpp
src/shaders/: compile.py  compile.sh
src/shaders/src/: light_shader.frag  light_shader.vert  mandelbrot.frag  mandelbrot.vert  shader.frag  shader.vert
src/test/: CMakeLists.txt  main.cpp
